--- a/.github/workflows/Video-processing.yml
+++ b/.github/workflows/Video-processing.yml
@@ -97,7 +97,7 @@ jobs:
               # Download using wget with retries
               for attempt in {1..3}; do
                 echo "Attempt $attempt to download video..."
-                wget --tries=3 --timeout=30 -O "video_${range_index}_${VIDEO_INDEX}.mp4" "$DIRECT_URL"
+                wget -O "video_${range_index}_${VIDEO_INDEX}.mp4" "$DIRECT_URL"
                 
                 if [ $? -eq 0 ] && [ -f "video_${range_index}_${VIDEO_INDEX}.mp4" ]; then
                   echo "Download successful!"
